syntax = "proto3";

option java_package = "java_msg";

message MessageVarints {
  int32 int = 1;
  int64 long = 2;
  sint32 sint = 3;
  sint64 slong = 4;
  bool bl = 5;
  uint32 uint = 7;
  uint64 ulong = 8;

  enum TestEnum {
    firstVal = 0;
    secondVal = 1;
    thirdVal = 2;
  }

  TestEnum enumField = 6;
}
