syntax = "proto3";

message Result {
	int32 errorCode = 1;
}

message GenericResponse {
	Result result = 1;
}